[project]
name = "hermes-plugin-carabiner"
version = "0.1.0"
description = "Honcho-backed Hermes plugin for specialist-agent collaboration memory."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Donovan Yohan"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
